2003-10-28  John Sullivan  <sullivan@apple.com>

	- fixed 3465613 -- REGRESSION (111): Crash creating nib that 
	contains WebView

        Reviewed by Chris.

        * WebView.subproj/WebView.m:
        (-[WebView mainFrame]):
	check for nil _private before dereferencing.

2003-10-28  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3465591>: Security: Netscape plug-ins can execute JavaScript in other frames

        Reviewed by mjs.

        * Plugins.subproj/WebBaseNetscapePluginView.m:
        (-[WebBaseNetscapePluginView evaluateJavaScriptPluginRequest:]): renamed, no need to pass the target frame since the target is either the plug-in itself or the frame that contains the plug-in
        (-[WebBaseNetscapePluginView loadPluginRequest:]): call renamed evaluateJavaScriptPluginRequest
        (-[WebBaseNetscapePluginView loadRequest:inTarget:withNotifyData:]): if this is a JS request that is targeted at a frame, return NPERR_INVALID_PARAM if the frame is not the frame that contains the plugin

2003-10-28  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3437959>: javascript: URLs don't work from Java (and other Cocoa plugins, if any)

        Reviewed by mjs.

        * Plugins.subproj/WebPluginController.m:
        (-[WebPluginController showURL:inFrame:]): support JS requests targeted only to the plug-in's frame.

2003-10-27  John Sullivan  <sullivan@apple.com>

        - fixed 3441258 -- hysteresis to start dragging a link is too small; too easy to start drag

        Reviewed by Chris.

        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView _handleMouseDragged:]):
        Split DragHysteresis into two values, one for links and one for images. Make
        the link one much larger than the image one (since dragging an image doesn't
        occur accidentally in the ways that dragging a link does).

2003-10-27  Chris Blumenberg  <cblu@apple.com>
